--- a/01.css
+++ b/01.css
@@ -63,6 +63,12 @@ table, th, td {
     margin: 20px;
 }
 
+img {
+    display: block;
+ 	  margin-left: auto;
+  	  margin-right: auto;
+}
+
 /* All of navbar learned from W3 Schools at
 https://www.w3schools.com/howto/howto_js_topnav.asp */
 .navbar {
